validações occurrence gerais